# my-two-cents-backend

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
assets/: base.css
prediction_engine/: web.py
prediction_engine/api/v1/: prediction_api.py  testing_api.py  trainer_api.py
prediction_engine/classes/: connection_manager.py  web_socket_manager.py
prediction_engine/config_files/: logger_config.py
prediction_engine/helpers/: alpaca_api_caller.py  trader.py  trainer.py
tests/: auth_mock.py  conftest.py
tests/api/v1/: test_calculation.py
